fixed-spacing

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,10 @@ div>h1{
     font-family: 'Poppins', sans-serif;
     color:rgb(48, 47, 47);
     font-weight: 800;
-    font-size: 5rem;
     text-align: center;
     word-spacing: 1px;
     letter-spacing: 1px;
-
+    z-index: 1;
 
 }
 button{
@@ -30,15 +29,15 @@ main {
     background-position: center;
     height: 100vh;
     display: flex;
-   
+   overflow: hidden;
     
 }
 img.logo{
-    z-index: 1;
+    z-index: -1;
 }
 .blur-container{
     height: 100dvh;
-    opacity: 0.9;
+    opacity: 1.5;
     backdrop-filter: blur(10px) saturate(180%);
     -webkit-backdrop-filter: blur(5px) saturate(180%);
     background-color: rgba(255, 255, 255, 0.15);
